--- a/app/globals.css
+++ b/app/globals.css
@@ -35,20 +35,21 @@ h1, h2, h3, h4, h5, h6 {
   @media (min-width: 640px) {
     .nav ul>li { display: inline; float: left; text-align: center; min-width: 100px; position: relative; }
     .nav ul>li>a { color: #FFF; display: block; font-size: 18px; margin-top: 5px; padding: 0 11px; height: 40px; line-height: 36px; box-sizing: border-box; position: relative; }
-    .nav ul>li>a:before { content:""; display:inline; float:left; margin: 0 2px 0 0; width:30px; height:40px; background:url(//my.kapook.com/svg-portal/ico-horoscope.svg) 0 0 no-repeat; background-size:24px;}
-    .nav ul>li:first-child>a:before { background-position: 0 0}
-    .nav ul>li:nth-child(2)>a:before { background-position: 0 -40px}
-    .nav ul>li:nth-child(3)>a:before { background-position: 0 -80px}
-    .nav ul>li:nth-child(4)>a:before { background-position: 0 -120px}
-    .nav ul>li:nth-child(5)>a:before { background-position: 0 -160px}
-    .nav ul>li:nth-child(6)>a:before { background-position: 0 -200px}
-    .nav ul>li:nth-child(7)>a:before { background-position: 0 -240px}
-    .nav ul>li:nth-child(8)>a:before { background-position: 0 -280px}
-    .nav ul>li:nth-child(9)>a:before { background-position: 0 -320px}
-    .nav ul>li:nth-child(10)>a:before { background-position: 0 -360px}
-    .nav ul>li:nth-child(11)>a:before { background-position: 0 -400px}
-    .nav ul>li:nth-child(12)>a:before { background-position: 0 -440px}
-    .nav ul>li:nth-child(13)>a:before { background-position: 0 -480px}
+    .nav ul>li>a:before { content:""; display:inline; float:left; margin: 0 2px 0 0; width:30px; height:40px; background:url(//my.kapook.com/svg-portal/ico-game.svg) 0 0 no-repeat; background-size:24px;}
+  .nav ul>li.active>a:before, .nav ul>li:hover>a:before { background:url(https://my.kapook.com/svg-portal/ico-game2.svg) #FFF 0 0 no-repeat; background-size:24px;}
+  .nav ul>li:first-child>a:before { background-position: 0 0}
+  .nav ul>li:nth-child(2)>a:before { background-position: 0 -40px}
+  .nav ul>li:nth-child(3)>a:before { background-position: 0 -80px}
+  .nav ul>li:nth-child(4)>a:before { background-position: 0 -120px}
+  .nav ul>li:nth-child(5)>a:before { background-position: 0 -160px}
+  .nav ul>li:nth-child(6)>a:before { background-position: 0 -200px}
+  .nav ul>li:nth-child(7)>a:before { background-position: 0 -240px}
+  .nav ul>li:nth-child(8)>a:before { background-position: 0 -280px}
+  .nav ul>li:nth-child(9)>a:before { background-position: 0 -320px}
+  .nav ul>li:nth-child(10)>a:before { background-position: 0 -360px}
+  .nav ul>li:nth-child(11)>a:before { background-position: 0 -400px}
+  .nav ul>li:nth-child(12)>a:before { background-position: 0 -440px}
+  .nav ul>li:nth-child(13)>a:before { background-position: 0 -480px}
   }
   
   .nav ul>li:last-child { min-width: auto; }
